2010-01-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py, photoimage.py: Fixed a frame position bug (issue #31).
	* COPYING, gphotoframe.glade: Updated copyright years.
	* picasa.py: Removed gdata-python-client dependency.
	* setup.cfg: Enabled gnome-screensaver support (issue #21).

2009-08-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* constants.py: Fixed the glade file directory.

2009-08-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 0.4.1 release.

2009-08-11  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fspot.py: Added support for F-Spot 0.6.0 database (issue #28).

2009-08-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* README, COPYING, GPL: Updated the copyright notice (issue #27).

2009-07-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fspot.py: Fixed a tag related bug (issue #25).
	  Fixed a sql statement bug (issue #26).

2009-07-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 0.4 release.
	* gnomescreensaver.py (GsThemeWindow): Code refactoring.
	* photoimage.py: Fixed a bug.

2009-07-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoimage.py, menu.py, photoframe.py: Divided photoframe.py.

2009-07-07  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py, gnomescreensaver.py, etc: Added support for
	  gnome-screensaver (issue #21).
	* extras/build_i18n.py: Added distutils.extras hacks.
	* fspot.py: Fixed bugs of ratings.

2009-07-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py, photoliststore.py: Update Popup menu when an
	  opend image file is deleted (issue #16).
	* inotify.py, folder.py, base.py, photoliststore.py: Added support
	  for inotify in the Folder plugin.  Update recents queue with inotify.

2009-06-30  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* ja.po: Updated translation.
	* fspot.py: Added a rate weight option.  Added advanced options.
	* base.py, gphotoframe.glade: Adjust UI.
	* base.py, folder.py, gphotoframe.glade: Added subfolders settings
	  for Folder plguin.